--- a/sites/Parallax-Moon-Light/css/style.css
+++ b/sites/Parallax-Moon-Light/css/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
 
 * {
@@ -10,7 +9,8 @@
 
 body {
     background: rgb(10,1,29);
-    min-height: 1475px;
+    /* min-height: 1475px; */
+    min-height: 150vh;
 }
 
 section {
@@ -61,31 +61,12 @@ section img {
     z-index: 2;
 }
 
-footer {
-    width: auto;
-    height: 100vh;
-}
+@media screen and (min-width: 300px) and (max-width: 800px) {
+    #text {
+        text-align: center;
+    }
 
-.footerTittle {
-    cursor: default;
-    user-select: none;
-    color: white;
-    text-align: center;
-    position: relative;
-    top: 50%;
-    font-size: 75px;
-    transform: translateY(-50%);
-    transform: translateX(-100%);
-}
-
-.git-img {
-    /* visibility: hidden; */
-    position: relative;
-    top: 50%;
-    /* transform: translateY(100%); */
-    transform: translateX(-100%);
-    /* transform: translateX(240%); */
-    border-radius: 1000px;
-    width: 250px;
-    height: 250px;
+    body {
+        min-height: 165vh;
+    }
 }
