--- a/sites/Parallax-Moon-Light/css/style.css
+++ b/sites/Parallax-Moon-Light/css/style.css
@@ -19,7 +19,7 @@ body {
 
 section {
     position: relative;
-    height: 150vh;
+    height: 125vh;
     width: 100%;
     overflow: hidden;
     display: flex;
@@ -59,7 +59,6 @@ button {
     width: 250px;
     height: 75px;
     color: whitesmoke;
-    margin: 50px 0px;
     border-radius: 40px;
     background: linear-gradient(135deg, #8a508b 0%, #434461 100%);
 }
@@ -87,12 +86,28 @@ button:hover {
     z-index: 2;
 }
 
+.second {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 175px 0;
+}
+
 @media screen and (min-width: 300px) and (max-width: 800px) {
     #text {
         text-align: center;
     }
 
+    section {
+        height: 150vh;
+    }
+
     body {
         min-height: 165vh;
+    }
+
+    .second {
+        padding: 275px 0;
     }
 }
