button Parallax Moon Light

--- a/sites/Parallax-Moon-Light/css/style.css
+++ b/sites/Parallax-Moon-Light/css/style.css
@@ -55,18 +55,15 @@ section img {
 }
 
 button {
+    cursor: pointer;
     text-align: center;
     width: 250px;
     height: 75px;
-    color: whitesmoke;
-    border-radius: 40px;
-    background: linear-gradient(135deg, #8a508b 0%, #434461 100%);
-}
-
-button a {
+    color: #cc21cf;
     font-size: 50px;
     text-decoration: none;
-    color: inherit;
+    border-radius: 40px;
+    background: linear-gradient(135deg, #8a508b 0%, #434461 100%);
 }
 
 button:hover {
